# pltoolkit

./: pyproject.toml
.github/workflows/: workflow.yml
src/pltoolkit/: 2dplot.py  dataimport.py
test/: test.py
