[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[testpypi]
username = 
password = pypi-AgENdGVzdC5weXBpLm9yZwIkOGM3YjBiOGMtZDhkZS00ZjViLWIyYjktNzdhZDk5NThmMDBlAAIqWzMsImQ0YWNiZjExLTc2NWItNDM5MS1iODE2LWJlNGQ3YjhmYTcyYyJdAAAGIIf82gQObnsb0R-w1UEMeTp_lbW_aJuAaWXsX3vi8Xa5

[project]
dependencies = [
  "numpy",
  "mathplotlib",
  "pandas",
  "scipy",
]
name = "pltoolkit"
version = "0.0.1"
authors = [
  { name="IlIlth", email="maihorn@campus.tu-berlin.de" },
]
description = "A data analysis and visualization toolkit"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "git.tu-berlin.de:lilith/pl2.git"
Issues = "https://github.com/Maiheornchen/sampleproject/issues"