[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
dependencies = [
  "numpy",
  "matplotlib",
  "pandas",
  "scipy",
]
name = "pltoolkit"
version = "0.0.1"
authors = [
  { name="IlIlth", email="maihorn@campus.tu-berlin.de" },
]
description = "A data analysis and visualization toolkit"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/Maihoernchen/pltoolkit.git"
Issues = "https://github.com/Maiheornchen/pltoolkit/issues"